20- feat: ultimos cambios en vistas.
